# iso20022

./: .gitignore  Cargo.toml
xsd/: pacs.008.001.09.xsd
xsd-to-rust/: Cargo.toml
xsd-to-rust/src/: main.rs  xsd.rs
