[package]
name = "xsd-to-rust"
version = "0.1.0"
authors = ["Jakob Bowyer <jkbbwr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
serde = { version = "1.0.125", features = ["derive"] }
serde-xml-rs = { git = "https://github.com/RReverser/serde-xml-rs.git" }
codegen = "0.1.3"
